# buaaCFD

./: .gitmodules  CMakeLists.txt  README.md
data/: medium.vtk  medium.vtu  path.hpp.in  simple.vtk  simple2.vtk  simple2.vtu  tiny.vtk  tiny.vtu  tube1.vtk  tube2.vtk  tube3.vtk  ugrid_2d.geo  ugrid_2d.msh
demo/: CMakeLists.txt
demo/single/: CMakeLists.txt  model.cpp  vrfv.cpp
include/buaa/element/: data.hpp  edge.hpp  gauss.hpp  node.hpp  point.hpp  triangle.hpp
include/buaa/mesh/: basis.hpp  data.hpp  dim2.hpp  edge.hpp  point.hpp  triangle.hpp
include/buaa/mesh/vtk/: reader.hpp  writer.hpp
include/buaa/riemann/: ausm.hpp  linear.hpp  rotated.hpp  types.hpp
include/buaa/solver/: boundary.hpp  rkvr.hpp
test/: CMakeLists.txt
test/algebra/: CMakeLists.txt  column.cpp
test/element/: CMakeLists.txt  basis.cpp  edge.cpp  gauss.cpp  node.cpp  point.cpp  triangle.cpp
test/mesh/: CMakeLists.txt  basis.cpp  dim2.cpp  edge.cpp  point.cpp  triangle.cpp  vtk.cpp
test/riemann/: CMakeLists.txt  ausm.cpp  linear.cpp  rotated.cpp  types.cpp
