if (${PROJECT_NAME}_ENABLE_VTK)
  link_libraries(${VTK_LIBRARIES})
  add_executable(demo_single_model model.cpp)
  set_target_properties(demo_single_model PROPERTIES OUTPUT_NAME model)
  add_test(NAME DemoSingleModel COMMAND model)

  add_executable(demo_single_vrfv vrfv.cpp)
  set_target_properties(demo_single_vrfv PROPERTIES OUTPUT_NAME vrfv)
  add_test(NAME DemoSingleVrfv COMMAND vrfv)
endif (${PROJECT_NAME}_ENABLE_VTK)