# add_executable(test_mesh_node node.cpp)
# target_include_directories(test_mesh_node PRIVATE ${EIGEN_INC})
# set_target_properties(test_mesh_node PROPERTIES OUTPUT_NAME node)
# add_test(NAME TestMeshNode COMMAND node)

# add_executable(test_mesh_edge edge.cpp)
# target_include_directories(test_mesh_edge PRIVATE ${EIGEN_INC})
# set_target_properties(test_mesh_edge PROPERTIES OUTPUT_NAME edge)
# add_test(NAME TestMeshEdge COMMAND edge)

# add_executable(test_mesh_triangle triangle.cpp)
# target_include_directories(test_mesh_triangle PRIVATE ${EIGEN_INC})
# set_target_properties(test_mesh_triangle PROPERTIES OUTPUT_NAME triangle)
# add_test(NAME TestMeshTriangle COMMAND triangle)